--- a/css/styles.css
+++ b/css/styles.css
@@ -1,34 +1,167 @@
 #title{
+	font-family: 'Ubuntu', sans-serif;
 	background-color:#ff4c68;
 	color:#FFF;
   width:auto;
   padding:3% 15% 7%;
+
 }
+
 body{
 font-family: 'Montserrat', sans-serif;
+
 }
 h1 {
 font-family: 'Montserrat', sans-serif;
-    font-size: 3rem;
+    font-size: 3.5rem;
     font-weight: 900;
     color:#FFF;
     line-height:1.5;
+		padding-top:4.5rem;
 
 }
+navbar
+{
+		padding:0 0 4.5rem;
+}
+
+.nav-item{
+	padding:0 18px;
+	}
 
 .navbar-dark .navbar-brand {
-    color: #FFF;
+		font-family: 'Ubuntu', sans-serif;
+		color: #FFF;
+		font-size: 2.5rem;
+		font-weight: bold;
+		padding: 0 18px;
+
+
 }
 .title-image
 
   {
+padding-top:4.5rem;
 
+transform: rotate(25deg);
+width: 70%;
+margin-top:5%;
+margin-left: 15%;
 
 
 }
-.meet
+.download {
+		margin: 5% 3% 5% 0;
+		padding: 10px 20px;
+		font-size:18px;
 
-  {
+}
+h2
+{
+	font-family: 'Montserrat-Black', sans-serif;
+		font-weight:bold;
+}
+
+h3
+{
+font-family: 'Montserrat-Bold', sans-serif;
+font-weight:bold;
+font-size: 1.75rem;
+color:#000;
+text-align: center;
+
+}
+h4
+{
+font-family: 'Montserrat-Bold', sans-serif;
+font-weight:bold;
+font-size: 3rem;
+color:#fff;
+text-align: center;
+
+}
+p{
+	color:#8f8f8f;
+	font-size: 1rem;
+	}
 
 
+#features {
+position:relative;
+padding:3% 15% 2%;
+
+}
+
+.feat-item {
+padding: 4.5%;
+}
+
+
+.feat-icons
+{
+	color: #ef8172;
+	margin-bottom: 1rem;
+	text-align: center;
+
+}
+.feat-icons:hover {
+  color: #ff4c68;
+}
+
+
+.carousel-item{
+		padding:3% 15% 7%;
+		background-color:#ef8172;
+		font-size: 1rem;
+		color:#fff;
+		text-align: center;
+}
+.car-img
+{
+border-radius: 80%;
+max-width: 40%;
+max-height: 40%;
+position: absolute;
+margin-left:260px;
+
+}
+#press
+{
+padding:4%;
+background-color:#ef8172;
+display: block;
+text-align:center;
+}
+
+.press-size
+{
+	width:15%;
+	margin:0px 10px 50px;
+
+}
+#pricing{
+text-align: center;
+padding:7% 15% 10%;
+
+}
+.card-header
+{
+    padding: 25px;
+    margin-bottom: 0;
+    background-color: #FFF;
+    border-bottom: 1px solid
+}
+
+#cta{
+	background-color:#ff4c68;
+	color:#FFF;
+	width:auto;
+	padding:3% 15% 2%;
+	text-align: center;
+}
+#footer{
+text-align: center;
+margin: 5% 3% 5% 0;
+color:#ff4c68;
+font-weight: lighter;
 }
