--- a/css/styles.css
+++ b/css/styles.css
@@ -3,7 +3,6 @@
 	background-color:#ff4c68;
 	color:#FFF;
   width:auto;
-  padding:3% 15% 7%;
 
 }
 
@@ -41,12 +40,11 @@ navbar
 .title-image
 
   {
-padding-top:4.5rem;
-
+padding-top:4rem;
 transform: rotate(25deg);
 width: 70%;
-margin-top:5%;
-margin-left: 15%;
+margin-left: 5em;
+position:absolute;
 
 
 }
@@ -89,6 +87,7 @@ p{
 #features {
 position:relative;
 padding:3% 15% 2%;
+background-color: #FFF;
 
 }
 
@@ -138,9 +137,9 @@ text-align:center;
 	margin:0px 10px 50px;
 
 }
-#pricing{
+#pricing{ 
 text-align: center;
-padding:10% 15%;
+padding:10% 10%;
 
 }
 .card-header
@@ -165,7 +164,16 @@ color:#ff4c68;
 font-weight: lighter;
 }
 
-.price-table{
+.container-fluid{
+		padding:3% 15% 7%;
+	}
 
-
+	@media (max-width:1028px)
+	{
+	.title-image{
+	transform:rotate(0);
+		position: static;
+	}
+	#title{
+	text-align: center;
 }
